--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
         "ecmaFeatures": { "jsx": true }
     },
     "rules": {
-        "semi": "error",
+        "semi": [2, "always"],
         "curly": "error",
         "quotes": ["warn", "single"],
         "no-undef": "error",
