--- a/4_Express_and_Templating_Excercise/package.json
+++ b/4_Express_and_Templating_Excercise/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.2"
+    "express-handlebars": "^7.1.2",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
