--- a/5_NoSQL_and_MongoDB/package.json
+++ b/5_NoSQL_and_MongoDB/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "4_express_and_templating_excercise",
+  "name": "3_express_js_and_templating",
   "version": "1.0.0",
-  "type": "commonjs",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "SET NODE_ENV=development && nodemon ./index.js",
-    "prod": "SET NODE_ENV=production && node ./index.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongodb": "^6.3.0",
-    "uniqid": "^5.4.0"
-  },
-  "devDependencies": {
+    "mongoose": "^8.0.1",
     "nodemon": "^3.0.1"
   }
 }
