--- a/5_NoSQL_and_MongoDB/package.json
+++ b/5_NoSQL_and_MongoDB/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "chalk": "^4.1.2"
   }
 }
