--- a/7_Session_and_Authentication/package.json
+++ b/7_Session_and_Authentication/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^3.0.2",
     "uniqid": "^5.4.0"
   }
